trying to fix footer on mobile

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ html {
     padding-right: 20px;
 }
   textarea {
-    width: 500px;
+    width: auto;
   }
     
     /* media query for nav background color change */
@@ -115,5 +115,5 @@ html {
 
   }
 .row {
-    float: right;
+    float: left;
 }
